network-security-policies/tests/allow-get.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
description: "Allow HTTP GET /public from env=prod to app=service"
metadata:
  name: "rule1"
  namespace: tblshoot
spec:
  endpointSelector:
    matchLabels:
      app: tblshoot
  ingress:
  - fromEndpoints:
    - matchLabels:
        app: mariadb
#  egress:
#  - {}
  egress:
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": "mariadb"
        "k8s:app": "mariadb"
    toPorts:
    - ports:
      - port: "9104"
        protocol: TCP
      rules:
        http:
        - method: "GET"
          path: "/metrics"
