network-security-policies/tests/deny-all-namespace.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "deny-all-egress"
  namespace: tblshoot
spec:
  endpointSelector:
    matchLabels:
      app: tblshoot
  egress:
  - {}
  ingress:
  - {}
